fixed most layout issues using grids we now look nice on all screen sizes

--- a/simon_game.css
+++ b/simon_game.css
@@ -1,24 +1,28 @@
 body {
-  background-color: black;
+  font-family: "helvetica";
   color: white;
+  background-color: black;
+  text-align: center;
 }
 
-.row {
-  width: 500px;
+.game {
+  position: relative;
+  width: min(80vh, 80vw);
   margin: auto;
 }
 
-.btn {
-  float: left;
-  width: 200px;
-  height: 200px;
-  border-radius: 15px;
-  border: 1px solid black;
-  margin-right: 10px;
-  margin-bottom: 10px;
-  text-align: center;
-} 
+.button-grid {
+  width: min(80vh, 80vw);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  row-gap: 20px;
+  column-gap: 20px;
+}
 
+.button {
+  aspect-ratio: 1;
+  border-radius: 15px;
+}
 
 /* green */
 #btn1 {
@@ -37,7 +41,6 @@ body {
   background-color: #ff0000;
 }
 
-
 /* yellow */
 #btn3 {
   background-color: #a89200;
@@ -46,11 +49,28 @@ body {
   background-color: #ffdd00;
 }
 
+/* blue */
 #btn4 {
   background-color: #0b47a8;
 }
 .active#btn4 {
   background-color: #0062ff;
+}
+
+
+.start-button {
+  position: absolute;
+  top: calc(50% - (min(20vh, 20vw)/2));
+  left: calc(50% - min(10vh, 10vw));
+
+  width: min(20vh, 20vw);
+  line-height: min(20vh, 20vw);
+  aspect-ratio: 1;
+  border: 2px solid white;
+  background-color: black;
+  border-radius: 15px;
+  font-size: 1.2em;
+  font-weight: bold;
 }
 
 #bad_click {
@@ -71,22 +91,4 @@ body {
 #bad_click img {
   /*width: 380px;*/
   height: 500px;
-}
-
-#start_button {
-  text-align: center;
-  padding-top: 40px;
-  padding-bottom: -0px;
-  position: fixed;
-  top: 185px;
-  left: 545px;
-  border-radius: 15px;
-  border: 2px solid white;
-  width: 100px;
-  height: 55px;
-  background-color: black;
-}
-
-#main {
-  margin-top: 30px;
 }
